# lgui

./: .gitignore  CODE_OF_CONDUCT.md  HOWTOUSE.md  LICENCESHORT  README.md
doxygen/: Doxyfile
doxygen/html/: animations_8h_source.html  annotated.html  annotated_dup.js  bounds_8h_source.html  classes.html  classlgui_1_1drawables_1_1lCircle-members.html  classlgui_1_1drawables_1_1lCircle.html  classlgui_1_1drawables_1_1lCircle.js  classlgui_1_1drawables_1_1lDrawable-members.html  classlgui_1_1drawables_1_1lDrawable.html  classlgui_1_1drawables_1_1lDrawable.js  classlgui_1_1drawables_1_1lPNGImage-members.html  classlgui_1_1drawables_1_1lPNGImage.html  classlgui_1_1drawables_1_1lPNGImage.js  classlgui_1_1drawables_1_1lRectangle-members.html  classlgui_1_1drawables_1_1lRectangle.html  classlgui_1_1drawables_1_1lRectangle.js  classlgui_1_1drawables_1_1lText-members.html  classlgui_1_1drawables_1_1lText.html  classlgui_1_1drawables_1_1lText.js  classlgui_1_1drawables_1_1objects_1_1Bound-members.html  classlgui_1_1drawables_1_1objects_1_1Bound.html  classlgui_1_1drawables_1_1objects_1_1Bound.js  classlgui_1_1drawables_1_1objects_1_1CircleBound-members.html  classlgui_1_1drawables_1_1objects_1_1CircleBound.html  classlgui_1_1drawables_1_1objects_1_1CircleBound.js  (+55 more)
src/: CMakeLists.txt  main.cpp
src/drawables/: CMakeLists.txt  drawables.cpp  drawables.h
src/drawables/objects/: CMakeLists.txt  bounds.h  objects.cpp  objects.h
src/drawables/objects/animations/: CMakeLists.txt  animations.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/util/: CMakeLists.txt  util.h
src/window/: CMakeLists.txt  window.cpp  window.h
(+33 files in other folders)
